k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raphragrance
  namespace: default
  labels:
    app: raphragrance
    app.kubernetes.io/name: raphragrance
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app: raphragrance
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
